# LS

./: CMakeLists.txt  Device.cpp  Device.h  Homework Summary.doc  LogicSimulator.cpp  LogicSimulator.h  TextUI.cpp  TextUI.h  file1.lcf  gateAND.cpp  gateAND.h  gateNot.cpp  gateNot.h  gateOR.cpp  gateOR.h  iPin.cpp  main.cpp  oPin.cpp  oPin.h
src/: CMakeLists.txt  Device.cpp  LogicSimulator.cpp  TextUI.cpp  gateAND.cpp  gateNot.cpp  gateOR.cpp  iPin.cpp  main.cpp  oPin.cpp
src/include/: LogicSimulator.h  TextUI.h  iPin.h
src/testLcf/: test.lcf
unitTest/testCase/: CMakeLists.txt  DeviceTest.cpp  LogicSimulatorTest.cpp  TextUITest.cpp
